# egui_node_graph

./: Cargo.toml  README.md
egui_node_graph/: Cargo.toml
egui_node_graph/src/: editor_ui.rs  graph.rs  graph_impls.rs  traits.rs
egui_node_graph_example/: Cargo.toml
egui_node_graph_example/src/: app.rs
