[package]
name = "egui_node_graph"
description = "A helper library to create interactive node graphs using egui"
homepage = "https://github.com/leongor/egui_node_graph"
repository = "https://github.com/leongor/egui_node_graph"
license = "MIT"
version = "0.4.1"
keywords = ["ui", "egui", "graph", "node"]
authors = ["leongor"]
edition = "2021"
readme = "../README.md"
workspace = ".."

[features]
persistence = ["serde", "slotmap/serde", "smallvec/serde", "egui/persistence"]

[dependencies]
egui = { version = "0.28.1" }
slotmap = { version = "1.0.7" }
smallvec = { version = "1.13.2" }
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "1.0.63"
