[package]
name = "egui_node_graph_example"
version = "0.1.0"
authors = ["setzer22"]
edition = "2021"
rust-version = "1.76"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
eframe = "0.28.1"
egui_node_graph = { path = "../egui_node_graph" }
log = "0.4.21"

serde = { version = "1.0", optional = true }
wasm-bindgen-futures = "0.4.42"

[features]
default = []
persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]

[profile.release]
opt-level = 2 # fast and small wasm
